# rustpad

./: Cargo.toml
client/: Cargo.toml
client/src/: main.rs
rustpad/: Cargo.toml  build.rs  pyproject.toml  warthog_stick.toml  warthog_throttle.toml
rustpad/examples/: create_configuration.rs  genny_create.rs  genny_load.rs  runtime.rs  runtime_with_events.rs  scanner.rs
rustpad/generator/: __main__.py
rustpad/generator/templates/: decode.rs.jinja2  enum.jinja  mod.rs.template
rustpad/src/: generator.rs  lib.rs  main.rs  thrustmaster.rs
rustpad/templates/: decode.rs.txt  enum.jinja  mod.rs.template  mod.rs.txt
rustpad_generator/: Cargo.toml
rustpad_generator/src/: generator.rs
rustpad_generator/templates/: mod.rs.txt
