[package]
name = "client"
version = "0.1.0"
authors = ["Joshua Salzedo <thhunkn0wnd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.rustpad]
path = "../rustpad"

[dependencies.tokio]
version = "0.2.25"
features = ["full"]