[package]
name = "client"
version = "0.1.0"
authors = ["Joshua Salzedo <thhunkn0wnd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rover_tonic = { git = "ssh://git@gitlab.com/saddeback_rover_2020/telecom/protos.git", branch = "feature/unary_arm", version="0.2.1" }

[dependencies.rustpad]
path = "../rustpad"

[dependencies.tokio]
version = "0.2.25"
features = ["full"]

[dependencies.gilrs]
version = "0.8.0"
features = ["serde"]

