[package]
name = "rustpad"
version = "0.1.0"
authors = ["joshua salzedo <thHunkn0WNd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.57"

[dependencies.gilrs]
version = "0.7.4"
features = ["serde-serialize"]
git = "https://gitlab.com/gilrs-project/gilrs.git"

[build-dependencies]
rustpad_generator = {path = "../rustpad_generator"}