[package]
name = "rustpad"
version = "0.2.0"
authors = ["joshua salzedo <thHunkn0WNd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.57"
toml = "*"


[dependencies.gilrs]
version = "0.8.0"
features = ["serde-serialize"]

[build-dependencies]
rustpad_generator = {path = "../rustpad_generator"}
