[tool.poetry]
name = "generator"
version = "0.1.0"
description = ""
authors = ["joshua salzedo <thHunkn0WNd@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
toml = "^0.10.1"
attrs = "^19.3.0"
click = "^7.1.2"
loguru = "^0.5.0"
jinja2 = "^2.11.2"

[tool.poetry.dev-dependencies]
ipython = "^7.14.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
