[package]
name = "rustpad_generator"
version = "0.1.0"
authors = ["Joshua Salzedo <joshuasalzedo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.6"
askama = "0.9.0"
serde_derive = "1.0.116"
serde = "1.0.116"
